# clang-build

./: .appveyor.yml  .coveragerc  .gitignore  .travis.yml  404.html  LICENSE.txt  README.md  README.rst  clang-build.py  index.html  requirements.txt  setup.cfg  setup.py  sitemap.xml  test_me.py
.github/workflows/: ci.yml
0.0.0/: index.html
0.0.0/config_reference/: index.html
0.0.0/examples/: index.html
assets/css/: styles.2454bfca.css
assets/js/: 08a9e090.847458af.js  0d7cc6c0.d1547ac9.js  156a19f3.1ada0e2d.js  17896441.cfe5665e.js  1a44a497.e33b27db.js  1a49fcd0.4a9ec325.js  1be78505.f3469d2e.js  1f391b9e.b368d382.js  211be824.dcb8956d.js  23374ca6.99b05dc8.js  2689.abaee1fa.js  27635185.fe0db6b7.js  2caaa53e.7f2b4f10.js  2f55153c.3d06f289.js  322c5316.d1405012.js  393be207.cf75a84c.js  3bc1edd7.83506155.js  5558dbfc.a1a1fdf2.js  (+38 more)
clang-build/: clang-build.py
clang_build/: __init__.py  api.py  build_type.py  circle.py  clang.py  clang_build.py  cli.py  compiler.py  dependency_tools.py  dialect_check.py  directories.py  environment.py  errors.py  flags.py  git_tools.py  io_tools.py  logging_stream_handler.py  logging_tools.py  platform.py  progress_bar.py  project.py  single_source.py  target.py  tool_chains.py  toolchain.py  tree_entry.py
config_reference/: index.html
docs/: Defaults.md  Makefile  Subprojects.md  conf.py  index.rst  make.bat
examples/: index.html
markdown-page/: index.html
test/: test.py  test_build_type.py  test_circle.py  test_cli.py  test_compiler.py  test_directories.py  test_environment.py  test_projects.py
(+154 files in other folders)
