[metadata]
name = clang-build
author = Trick-17
summary = Easy build tool for C++ projects focussing on simplicity
license = MIT
home-page = https://github.com/Trick-17/clang-build
description-file = README.md
keywords = clang, build

[files]
packages = clang_build

[entry_points]
console_scripts =
    clang-build = clang_build.clang_build:_main