[metadata]
name = clang-build
author = Trick-17
summary = Easy build tool for C++ projects focussing on simplicity
license = MIT
home_page = https://github.com/Trick-17/clang-build
long_description = file: README.md
long_description_content_type = text/markdown
keywords = clang, build

[files]
packages = clang_build

[entry_points]
console_scripts =
    clang-build = clang_build.cli:_main